--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "shukumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   }
 }
